--- a/files/65ad9d0ea80a660044b6.css
+++ b/files/65ad9d0ea80a660044b6.css
@@ -1,1 +1,11 @@
-a{color:inherit;text-decoration:none;border-bottom:1px dashed #aaa}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
+a {
+	color: inherit;
+	text-decoration: none;
+	border-bottom: 1px dashed #aaa
+}
+
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box
+}
