--- a/files/style.css
+++ b/files/style.css
@@ -4,6 +4,18 @@ h1 {
     font-variant: normal; font-weight: 700; 
     line-height: 26.4px; 
 } 
+a {
+	color: inherit;
+	text-decoration: none;
+	border-bottom: 1px dashed #aaa
+}
+
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box
+}
+
 h2 { 
     font-family: Consolas, monaco, monospace; 
     font-size: 24px; 
