--- a/files/style.css
+++ b/files/style.css
@@ -107,12 +107,12 @@ pre {
 	flex-wrap: wrap;
 	-webkit-align-items: flex-start;
 	-moz-box-align: start;
-	align-items: flex-start
+	align-items: flex-start;
 }
 
 .Home_sections__3G_SN section {
 	margin: 0 20px;
-	min-width: 200px
+	min-width: 200px;
 }
 
 .Home_avatar__LWcjd {
@@ -252,13 +252,17 @@ pre {
 	margin-left: .5rem
 }
 
-@media(max-width:600px) {
+@media(max-width:900px) {
 	.Home_grid__QT_Bm {
 		width: 100%;
 		-webkit-flex-direction: column;
 		-moz-box-orient: vertical;
 		-moz-box-direction: normal;
-		flex-direction: column
+		flex-direction: column;
+		align-items: center;
+	}
+	.Home_sections__3G_SN {
+		margin-left: 45px;
 	}
 }
 
