--- a/files/style.css
+++ b/files/style.css
@@ -144,7 +144,7 @@ pre {
 
 .Home_list__3A6Ue {
 	list-style: none;
-	padding: 0
+	padding: 0;
 }
 
 .Home_list__3A6Ue li {
@@ -262,7 +262,7 @@ pre {
 		align-items: center;
 	}
 	.Home_sections__3G_SN {
-		margin-left: 45px;
+		margin-left: 40px;
 	}
 }
 
